# ZaVI_TrackCycling

./: CMakeLists.txt  LICENSE  README.md
MatlabProofs/: create_track_function.m  orc_proof_of_sixdays_constant_r_proof.m  (+2 more)
SixdaysCode/: CMakeLists.txt  main.cpp
SixdaysCode/Config/: main_config.cfg  trial_1.cfg  trial_2.cfg  trial_3.cfg
SixdaysCode/Estimators/: AlignType.hpp  BatchEstimator.hpp  CalibrationBatch.hpp  Estimator.hpp  LambdaPathUKFExtended.hpp  PseudoMeasurements.hpp  UKF.hpp  XsensBatchWithBias.hpp
SixdaysCode/Estimators/Callbacks/: BatchStateToFile.hpp  LambdaPathStateReaderCallback.hpp  UKFStateSaverCallback.hpp
SixdaysCode/Estimators/Models/: CalibrationModel.cpp  CalibrationModel.hpp  LambdaPathWithVelocityModel.hpp  State.hpp  XsensModelWithBias.cpp  XsensModelWithBias.hpp
SixdaysCode/Estimators/PseudoMeasurementsHelperClasses/: PenaltyMap.cpp  PenaltyMap.hpp
SixdaysCode/Estimators/StateBoxes/: AccelerationBiasBox.hpp  AngularRateBiasBox.hpp  CartesianBox.hpp  CartesianDerivBox.hpp  HomogeneousCoordinatesBox.hpp  LambdaPathBoxNoAcceleration.hpp  OrientationBox.hpp  OrientationSpeedBox.hpp  OrientationSpeedDerivBox.hpp  StateBox.hpp
SixdaysCode/Estimators/source/: CalibrationBatch.cpp  XsensBatchWithBias.cpp
SixdaysCode/OSG_VIZ/: ErrorEllipse.hpp  OSG_VIZ_Transform.cpp  OSG_VIZ_Transform.hpp  osg_viz.cpp  osg_viz.hpp
SixdaysCode/Plugins/: FileIMUPlugin.cpp  FileIMUPlugin.hpp  PseudoPlugin.hpp  imu_plugin.hpp  rotation_viz.hpp  sensor_plugin.hpp  state_plugin_base.hpp  state_plugin_estimator.hpp
SixdaysCode/PythonEvaluation/: average_rms.py  eval.py
SixdaysCode/Setups/: CalibrationSetup.cpp  ExtendedLambdaSetup.cpp  Functors.hpp  LoadResult.cpp  ODESetups.hpp  SetupBase.hpp
SixdaysCode/Sixdays/: BikeInfo.hpp  LaserBarrier.cpp  LaserBarrier.hpp
SixdaysCode/trial_1/result_100_iterations/: Laser_1_expected.csv  Laser_2_expected.csv  Laser_3_expected.csv  Laser_4_expected.csv  Laser_5_expected.csv  Laser_6_expected.csv  input_mask  time_diffs  visualize_trajectory.py
SixdaysCode/trial_2/: input_mask
SixdaysCode/trial_2/results_100/: Laser_1_expected.csv  Laser_2_expected.csv  Laser_3_expected.csv  Laser_4_expected.csv  Laser_5_expected.csv  Laser_6_expected.csv  time_diffs
SixdaysCode/trial_3/results_100/: Laser_1_expected.csv  Laser_2_expected.csv  Laser_3_expected.csv  Laser_4_expected.csv  Laser_5_expected.csv  Laser_6_expected.csv  input_mask  time_diffs
utils/: CMakeLists.txt  CSV_Reader.cpp  CSV_Reader.hpp  Callbacker.hpp  CameraToVideo.hpp  Eigen_Utils.hpp  Eigen_Utils.tpp  KeyCallbacker.hpp  OSG_UTILS.cpp  OSG_Utils.hpp  ZaVI_Utils.cpp  ZaVI_Utils.hpp  ZaviConfig.cpp  ZaviConfig.hpp  threaded_object.hpp  threaded_objects.cpp  zavi_utils.doxyfile
